--- a/app/components/theme/tw.css
+++ b/app/components/theme/tw.css
@@ -1,6 +1,7 @@
 /* Markdown Theme Styles */
 article {
   font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-size: 16px;
   line-height: 1.6;
   padding: 1em;
   border: 32px solid #003d4f;
@@ -58,12 +59,14 @@ h6 {
 
 p {
   color: #000000;
+  font-size: 16px;
   margin: 16px 0;
   line-height: 1.6;
 }
 
 a {
   color: #47a1ad;
+  font-size: 16px;
   text-decoration: none;
 }
 
@@ -73,17 +76,20 @@ a:hover {
 
 strong {
   color: #f2617a;
+  font-size: 16px;
   font-weight: 600;
 }
 
 em {
   color: #cc850a;
+  font-size: 16px;
   font-style: italic;
 }
 
 blockquote {
   border-left: 4px solid #6b9e78;
   color: #666666;
+  font-size: 16px;
   padding-left: 1em;
   margin: 1em 0;
   background-color: #edf1f3;
@@ -93,6 +99,7 @@ blockquote {
 ul {
   list-style-type: disc;
   color: #000000;
+  font-size: 16px;
   padding-left: 24px;
   margin: 8px 0;
 }
@@ -100,11 +107,11 @@ ul {
 ol {
   list-style-type: decimal;
   color: #000000;
+  font-size: 16px;
   padding-left: 24px;
   margin: 8px 0;
 }
 
-/* 列表嵌套样式 */
 ul ul {
   list-style-type: circle;
   margin-top: 4px;
@@ -123,7 +130,6 @@ ol ol ol {
   list-style-type: lower-roman;
 }
 
-/* 列表项间距 */
 li {
   margin: 4px 0;
 }
@@ -137,6 +143,7 @@ table {
 th {
   background-color: #edf1f3;
   color: #003d4f;
+  font-size: 16px;
   border: 1px solid #666666;
   padding: 8px;
   font-weight: 600;
@@ -144,6 +151,7 @@ th {
 
 td {
   border: 1px solid #666666;
+  font-size: 16px;
   padding: 8px;
 }
 
